# OverWatch

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  configure.py  install.sh  monitor_with_alerts.py  pyproject.toml  quick_setup.sh  requirements.txt  setup.py  test_email.py  test_overwatch.py
.github/workflows/: publish.yml  test.yml
overwatch/: __init__.py  __main__.py  overwatch.py
overwatch/alerts/: __init__.py  email.py  manager.py  telegram.py  thresholds.json
overwatch/api/: __init__.py  server.py  websocket.py
overwatch/cli/: __init__.py  commands.py  main.py
overwatch/core/: __init__.py  cpu.py  disk.py  memory.py  network.py  processes.py  sensors.py
overwatch/plugins/: __init__.py  example_plugin.py
overwatch/ui/: __init__.py  dashboard.py
overwatch/ui/components/: __init__.py  cpu_panel.py  disk_panel.py  memory_panel.py  network_panel.py  process_panel.py
overwatch/utils/: __init__.py  loader.py  system_info.py
